# literal-reflection

./: README.md
include/: CMakeLists.txt  compiler_macros.h  extract_typename.hpp  header_only.hpp  literal_type.hpp  main.cpp  passert.h
include/detail/: Flat_tuple.hpp  compiler_macros.h  enum_reflection.hpp  extract_typename.hpp  literal_type.hpp  preprocessor_fold.hpp
include/detail/utils/: flat_tuple.hpp  passert.h  type_list.hpp
include/enumeration/: enum_reflection.hpp  pseudoenum.hpp
include/parsing/: character_traits.hpp  lexer.hpp  token.hpp
include/util/: passert.h  short_types.hpp  stypeid.hpp  tuple.hpp  type_list.hpp  type_pair.hpp
